--- a/cw3/Properties/launchSettings.json
+++ b/cw3/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "cw3": {
       "commandName": "Project",
       "launchBrowser": false,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api/students",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
